# sistema-operacionais-trabalho-1

./: CMakeLists.txt  README.md
include/: auxiliate.h  utils.h
src/: auxiliate.c  diferent-process.c  sequencial.c  threads.c  utils.c
